<resources>
    <string name="app_name">Lab01PizzaParty</string>
    <string name="number_of_people">Number of people</string>
    <string name="how_hungry">How hungry?</string>
    <string name="light">Light</string>
    <string name="medium">Medium</string>
    <string name="ravenous">Ravenous</string>
    <string name="total_pizzas">Total Pizzas:</string>
    <string name="calculate">Calculate</string>
    <string name="pizza_party_app">Pizza Party App</string>
</resources>